IHHW-002, 003, 004, 093 contrast fixes

--- a/htdocs/wp-content/themes/ihh/resources/assets/styles/common/_global.scss
+++ b/htdocs/wp-content/themes/ihh/resources/assets/styles/common/_global.scss
@@ -73,7 +73,7 @@ a {
 }
 
 main p a {
-  color: #00e !important;
+  color: #015149;
   text-decoration: underline !important;
 
   &:hover {
