--- a/htdocs/wp-content/themes/ihh/resources/assets/styles/common/_variables.scss
+++ b/htdocs/wp-content/themes/ihh/resources/assets/styles/common/_variables.scss
@@ -6,8 +6,7 @@ $font-source-sans: "Source Sans Pro", sans-serif !default;
 $font-open-sans: "Open Sans", sans-serif !default;
 $font-nunito: "Nunito", sans-serif !default;
 
-// Don't even ask...
-$kuvittaja-green: rgb(1, 160, 144) !default;
+$kuvittaja-green: #015149 !default;
 $kuvittaja-green-light: rgb(162, 196, 189) !default;
 
 $kuvittaja-pink: rgb(247, 160, 145) !default;
