--- a/htdocs/wp-content/themes/ihh/resources/assets/styles/components/_services-list.scss
+++ b/htdocs/wp-content/themes/ihh/resources/assets/styles/components/_services-list.scss
@@ -81,7 +81,7 @@
       padding: 20px;
     }
 
-    background-color: $kuvittaja-pink-light;
+    background-color: $kuvittaja-pink;
     padding: 35px 40px;
 
     h2 {
