--- a/htdocs/wp-content/themes/ihh/resources/assets/styles/components/home/_alerts.scss
+++ b/htdocs/wp-content/themes/ihh/resources/assets/styles/components/home/_alerts.scss
@@ -1,6 +1,6 @@
 .alert-area {
   a {
-    color: #00e !important;
+    color: $kuvittaja-green !important;
     text-decoration: underline !important;
 
     &:hover {
