--- a/htdocs/wp-content/themes/ihh/resources/assets/styles/layouts/_about.scss
+++ b/htdocs/wp-content/themes/ihh/resources/assets/styles/layouts/_about.scss
@@ -9,7 +9,7 @@
 }
 
 .about-services {
-  background: $kuvittaja-pink-light;
+  background: $kuvittaja-pink;
   margin: 0 0 160px 0;
   padding: 60px 0;
 
@@ -48,6 +48,7 @@
       padding: 0 15px;
       margin: 0 auto;
       text-align: center;
+      color: $kuvittaja-green;
 
       &::before {
         content: "";
